@@ -7,6 +7,7 @@ BUGS:
   - All known bugs have been fixed.
 
 version 0.7.2 - Currently available as svn snapshot
+  - CHG: remove demo and support for scipy's gplt package.
 
 version 0.7.1 - (Rev 378) - Aug 20, 2006
   - BUG: Fix a bug in backward trajectory simulation
